test/classes/ferguson/delete-free/shared-error-nonclass.good
shared-error-nonclass.chpl:7: In function 'run':
shared-error-nonclass.chpl:8: error: Shared only works with classes
